--- a/docs-dist/index.html
+++ b/docs-dist/index.html
@@ -8,7 +8,7 @@
     />
     <link rel="shortcut icon" type="image/x-icon" href="/imgs/logo.png" />
     <link rel="icon" href="/imgs/logo.png" />
-    <link rel="stylesheet" href="/umi.css" />
+    <link rel="stylesheet" href="/docs-dist/umi.css" />
     <script>
       window.routerBase = "/";
     </script>
@@ -30,6 +30,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/umi.js"></script>
+    <script src="/docs-dist/umi.js"></script>
   </body>
 </html>
